fixed video not showing up on firefox and google

--- a/base.css
+++ b/base.css
@@ -8,7 +8,9 @@ body{
     background-color: black;
 }
 #background_vid{
-    position: absolute;
+    position: fixed;
+    -webkit-background-size: cover;
+
     width: 90%;
     min-height:50vh;
     /* right: 0; */
